tests/neg/i13991.check
-- Error: tests/neg/i13991.scala:5:7 -----------------------------------------------------------------------------------
 5 |  first[String] // error // before line 10 to test alignment of the error message `|`
   |  ^^^^^^^^^^^^^
   |  No given instance of type Foo[String] was found
   |--------------------------------------------------------------------------------------------------------------------
   |Inline stack trace
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   |This location contains code that was inlined from i13991.scala:8
 8 |  compiletime.summonInline[Foo[A]].foo
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   |This location contains code that was inlined from i13991.scala:8
11 |  second[A] + 42 // after line 10 to test alignment of the error message `|`
   |  ^^^^^^^^^
    --------------------------------------------------------------------------------------------------------------------
